syntax = "proto3";

package games;

option go_package="github.com/programzheng/games";

service Greeter {
  rpc RandomTicket (RandomTicketRequest) returns (RandomTicketResponse) {}
  rpc GetIssuedUserTicketsByAgentCode (GetIssuedUserTicketsByAgentCodeRequest) returns (GetIssuedUserTicketsByAgentCodeResponse) {}
  rpc AssignOnceRandomIssuedTicketToThirdPartyUser (AssignOnceRandomIssuedTicketToThirdPartyUserRequest) returns (AssignOnceRandomIssuedTicketToThirdPartyUserResponse) {}
  rpc AssignRandomIssuedTicketToThirdPartyUser (AssignRandomIssuedTicketToThirdPartyUserRequest) returns (AssignRandomIssuedTicketToThirdPartyUserResponse) {}
}

message RandomTicketRequest {
  int64 count = 1;
}

message RandomTicketResponse {
  string message = 1;
}

message UserTicket {
  string code = 1;
  string name = 2;
}

message AssignOnceRandomIssuedTicketToThirdPartyUserRequest {
  string code = 1;
  string thirdPartyID = 2;
}

message AssignOnceRandomIssuedTicketToThirdPartyUserResponse {
  UserTicket userTicket = 1;
}

message AssignRandomIssuedTicketToThirdPartyUserRequest {
  string code = 1;
  string thirdPartyID = 2;
}

message AssignRandomIssuedTicketToThirdPartyUserResponse {
  UserTicket userTicket = 1;
}

message GetIssuedUserTicketsByAgentCodeRequest {
  string code = 1;
}

message GetIssuedUserTicketsByAgentCodeResponse {
  repeated UserTicket userTickets = 1;
}
